[package]
name = "tower-http-req-id"
version = "0.1.0"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
description = "Tower middleware to generate/use request id"
license = "BSL-1.0"
repository = "https://github.com/DoumanAsh/tower-http-req-id"
keywords = ["tower", "request-id"]
categories = ["asynchronous", "network-programming", "web-programming"]
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies]
bytes = "1.1"
http = "0.2"
tower-layer = "0.3"
tower-service = "0.3"

[dependencies.iuuid]
package = "uuid"
version = "1"
optional = true
features = ["v4"]

[dependencies.mac_address]
version = "1"
optional = true

[dev-dependencies]
hyper = "0.14"
tower = { version = "0.4", features = ["util"] }
tokio = { version = "1.11", features = ["rt", "macros"] }

[features]
uuid = ["iuuid", "mac_address"]
